{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 3590,
  "lineage": "427a73e7-71d7-973c-b57d-27440c14d1f9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:094193992924:route-table/rtb-0c044eb8a7bdc5cd3",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-09e2f7c599fea6ebe",
                "route_table_id": "rtb-0c044eb8a7bdc5cd3",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0c044eb8a7bdc5cd3",
            "owner_id": "094193992924",
            "route_table_id": "rtb-0c044eb8a7bdc5cd3",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-025f37f9d5b8e1ae6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cryptotweets_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:094193992924:security-group/sg-03a99fd30f95014da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a99fd30f95014da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cryptotweets_security_group",
            "name_prefix": "",
            "owner_id": "094193992924",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025f37f9d5b8e1ae6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cryptotweets-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cryptotweets-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:094193992924:subnet/subnet-09aadbd9cf7733de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aadbd9cf7733de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "094193992924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cryptotweets-vpc"
            },
            "tags_all": {
              "Name": "cryptotweets-vpc"
            },
            "vpc_id": "vpc-025f37f9d5b8e1ae6"
          },
          "dependencies": [
            "aws_vpc.cryptotweets-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cryptotweets-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:094193992924:vpc/vpc-025f37f9d5b8e1ae6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-087a1b13e4a37b889",
            "default_route_table_id": "rtb-0c044eb8a7bdc5cd3",
            "default_security_group_id": "sg-0537ad93eba9ee92f",
            "dhcp_options_id": "dopt-03d0bdcf18f4ffefe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025f37f9d5b8e1ae6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c044eb8a7bdc5cd3",
            "owner_id": "094193992924",
            "tags": {
              "Name": "cryptotweets-vpc"
            },
            "tags_all": {
              "Name": "cryptotweets-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:094193992924:vpc-endpoint/vpce-0c7256fed3dc14145",
            "cidr_blocks": [
              "3.5.224.0/22",
              "16.12.18.0/23",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24"
            ],
            "id": "vpce-0c7256fed3dc14145",
            "owner_id": "094193992924",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c044eb8a7bdc5cd3"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-025f37f9d5b8e1ae6"
          },
          "dependencies": [
            "aws_vpc.cryptotweets-vpc",
            "data.aws_route_table.route_table"
          ]
        }
      ]
    }
  ]
}